<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Recycle 4 Better</string>
    <string name="welcome_text">Welcome on Recycle 4 Better.</string>
    <string name="explanation_text">To see if a product is recyclable, simply scan it\'s barcode</string>
    <string name="type_code_text">or type in the barcode number.</string>
    <string name="action_settings">Settings</string>
    <string name="scanButtonText">Start Scanner</string>
    <string name="BCTypeText">Barcode Type</string>
    <string name="Barcode_number">Barcode Number : </string>
    <string name="barcode">Barcode: </string>
    <string name="element_name_label">Element : </string>
    <string name="element_name_textview"/>
    <string name="element_recyclable_label">Recyclable :</string>
    <string name="server_address">http://snappy-storm-816.appspot.com</string>
    <string name="image_bucket_url">http://storage.googleapis.com/recycle4better_images</string>
    <string name="image_extension">.jpg</string>
    <string name="add_element_button_text">Add an element</string>
	<string name="new_element_name_label">Element name:</string>
	<string name="new_element_description_label">Description:</string>
	<string name="add_photo_button">Add a picture</string>
	<string name="new_element_is_recyclable_label">Recyclable</string>
	<string name="new_element_is_not_recyclable">NOT recyclable</string>
	<string name="new_element_recyclable_not_sure">Not sure</string>
	<string name="new_element_slider_button">More options</string>
	<string name="new_element_weight_label">Weight in grams</string>
	<string name="new_element_material_common_label">Material (common name)</string>
	<string name="new_element_material_scientific_label">Material (scientific name)</string>
	<string name="additional_options_text">Additional informations (for advanced users and definitely optional)</string>	
	<string name="new_element_name_hint">A simple name to identify the element</string>
	<string name="new_element_description_hint">A more complete description of the element so that other users can easily identify it.</string>
	<string name="save_button">Save</string>
	<string name="no_name_entered_toast">Give a name to the element.</string>
	<string name="no_photo_taken_toast">Add a photo of the element.</string>
	<string name="element_save_success">Element was successfully saved.</string>
	<string name="element_save_failure">There was an error while saving this element. Check your internet connection and try again.</string>
	<string name="element_edit_success">Element was successfully edited.</string>
	<string name="element_edit_failure">There was an error while editing this element. Check your internet connection and try again.</string>
	<string name="picture_upload_failure">There was an error while uploading the picture. Check your internet connection and try again.</string>
	<string name="product_brand_label">Brand</string>
	<string name="product_model_label">Model</string>
	<string name="add_product_button_text">Add a Product</string>
	<string name="product_not_found_text">Hey! It seems that this product is not present yet in our database. \n\nDo you want to take a minute and add it yourself ?</string>
	<string name="field_not_filled_text">Please fill all the fields</string>
	<string name="no_product_photo_taken_text">Please take a picture of the product</string>
	<string name="new_product_instruction_text">Please fill all fields and add a picture of the whole product.</string>
	<string name="retake_photo">Retake photo</string>
	<string name="shutter_text">Click</string>
	<string name="trust_score">Trust Score</string>
	<string name="edit">Edit</string>
	<string name="no_network_connection">You don\'t seem to have any active internet connection. Please look into that =)</string>
	<string name="main">Main</string>
	<string name="no_element1">:( \tThis product does not have any element attached. </string>
	<string name="no_element2">Elements are the way to tell people which parts of the product can be recycled. \n\n Add at least one Element to this product. </string>
	<string name="no_barcode_number">You forgot to type in the Barcode number. </string>
	
	<!-- To be transaled -->
	<string name="element_picture_text">First take a picture of the Element. </string>
	<string name="yes">YES </string>
	<string name="no">NO </string>
	<string name="recyclable_question">Is this Element recyclable? </string>
	<string name="continue_question">Do you want to add another Element? </string>
	<string name="add_more">Add more</string>
	<string name="stop">Stop here</string>
	<string name="element_wizard_question">Element Wizard</string>
	<string name="element_wizard_description">The Element Wizard is a convenient way to add Elements to a Product. It is faster than the traditional
	    method but only enables to take a picture and specify if the Element is recyclable. If you like to add additional informations
	    to the elements you create, we recommand that you disable this option.</string>
	<string name="find">Find</string>
	
</resources>
