<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_element_name_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/element_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView1"
        android:layout_toRightOf="@id/textView1"
        android:ems="10"
        android:maxLength="50"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginBottom="15dp"
        android:text="@string/new_element_description_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/element_descr_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView2"
        android:layout_toRightOf="@id/textView2"
        android:ems="10"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/element_recyclable_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:checkedButton="2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_not_recyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/new_element_is_not_recyclable"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radio_recyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_element_is_recyclable_label"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radio_not_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_element_recyclable_not_sure"
            android:textSize="13sp" />

    </RadioGroup>

    <Button
        android:id="@+id/add_element_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/element_recyclable_radio_group"
        android:text="@string/new_element_add_photo_button" />

    <Button
        android:id="@+id/save_element_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/add_element_picture_button"
        android:layout_toRightOf="@id/add_element_picture_button"
        android:text="@string/save_element_button" />

        <View
            android:id="@+id/view1"
            style="@style/Divider"
            android:layout_below="@id/add_element_picture_button"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp" />

</RelativeLayout>
</ScrollView>