<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true">   
    <ImageView
        android:id="@+id/element_picture_view"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_element_detail" />

    <TextView
        android:id="@+id/element_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/element_picture_view"
        android:layout_toRightOf="@+id/element_picture_view"
        android:maxLines="1"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/element_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/element_name_text_view"
        android:layout_below="@+id/element_name_text_view"
        android:layout_marginTop="20dp"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/element_picture_view"
        android:layout_below="@+id/element_picture_view"
        android:layout_marginTop="23dp"
        android:text="@string/element_recyclable_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageView
        android:id="@+id/element_recyclable_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:src="@drawable/tick_no" />

    <ImageButton
        android:id="@+id/element_upvote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/element_recyclable_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_up" />

    <TextView
        android:id="@+id/element_trust_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/element_upvote_button"
        android:layout_marginTop="20dp"
        android:text="@string/trust_score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/element_trust_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/element_trust_score_text_view"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/element_down_vote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/element_trust_score_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_down" />

    <Button
        android:id="@+id/element_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/element_picture_view"
        android:layout_alignLeft="@+id/element_description_text_view"
        android:drawableLeft="@drawable/edit"
        android:text="@string/edit" />

</RelativeLayout>

</ScrollView> 